--- a/views/posts/entry.jade
+++ b/views/posts/entry.jade
@@ -30,12 +30,9 @@
         span :
 
     .post-content
-      h3 The blog title
-      .inside-content
-        != entry.html
-        p blabla blabla. blabla blabla blabla blabla blabla blabla blabla blabla
-        p blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla
-        p blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla
+      // h3 The blog title
+      // .inside-content
+      != entry.html
 
     .loading Loading...
     .comments
